fluxcd/apps/overlays/production/zz-graveyard/home-assistant-external/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-external
spec:
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant-external
subsets:
  - addresses:
      - ip: 10.55.6.149
    ports:
      - port: 8123
        name: http
