fluxcd/apps/overlays/production/zz-graveyard/home-assistant-external/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: home-assistant-external
spec:
  host: home-assistant-external.gossip-stone.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
